# encrypt-me

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
test_files/: another_file.txt  numbers.txt
