[package]
name = "encrypt-me"
description = "Encrypt and encrypt files by shifting bytes."
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/RotrixLOL/encrypt-me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
